Create separate build step to optimize non-parallel publish

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,8 +4,25 @@ on:
   workflow_dispatch:
 
 jobs:
+  build:
+    runs-on: macos-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Java JDK
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: temurin
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+      - name: Build
+        run: ./gradlew assembleRelease --scan
+
   publish-github:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
+    environment: github
+    needs: build
     permissions:
       contents: read
       packages: write
@@ -20,18 +37,17 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
       - name: Build
-        run: ./gradlew publishAllPublicationsToGithubRepository --scan
+        run: ./gradlew publishAllPublicationsToGithubRepository --scan -Dorg.gradle.parallel=false
         env:
-          PUBLISHING: true
           ORG_GRADLE_PROJECT_githubUsername: boswelja
           ORG_GRADLE_PROJECT_githubToken: ${{ secrets.GITHUB_TOKEN }}
-          ORG_GRADLE_PROJECT_ossrhUsername: ${{ secrets.OSSRH_USERNAME }}
-          ORG_GRADLE_PROJECT_ossrhPassword: ${{ secrets.OSSRH_PASSWORD }}
           ORG_GRADLE_PROJECT_signingKey: ${{ secrets.SIGNING_KEY }}
           ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.SIGNING_PASSWORD }}
 
   publish-oss:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
+    environment: mavencentral
+    needs: build
     permissions:
       contents: read
       packages: write
@@ -46,18 +62,16 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
       - name: Build
-        run: ./gradlew publishAllPublicationsToOssRepository --scan
+        run: ./gradlew publishAllPublicationsToOssRepository --scan -Dorg.gradle.parallel=false
         env:
           PUBLISHING: true
-          ORG_GRADLE_PROJECT_githubUsername: boswelja
-          ORG_GRADLE_PROJECT_githubToken: ${{ secrets.GITHUB_TOKEN }}
           ORG_GRADLE_PROJECT_ossrhUsername: ${{ secrets.OSSRH_USERNAME }}
           ORG_GRADLE_PROJECT_ossrhPassword: ${{ secrets.OSSRH_PASSWORD }}
           ORG_GRADLE_PROJECT_signingKey: ${{ secrets.SIGNING_KEY }}
           ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.SIGNING_PASSWORD }}
 
-  upload-pages:
-    runs-on: ubuntu-latest
+  build-pages:
+    runs-on: macos-latest
     needs:
       - publish-github
       - publish-oss
@@ -79,7 +93,7 @@ jobs:
           path: "build/dokka/htmlMultiModule/"
 
   deploy-pages:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     needs: upload-pages
     permissions:
       pages: write
