Fix area labels

--- a/.github/area-labeler.yml
+++ b/.github/area-labeler.yml
@@ -5,8 +5,10 @@ documentation:
 dependencies:
   - gradle/libs.versions.toml
 
+bitrate:
+  - bitrate/**
 capacity:
-  - caoacity/**
+  - capacity/**
 percentage:
   - percentage/**
 temperature:
