--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,14 @@
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 org.gradle.caching=true
+org.gradle.configuration-cache=true
 
 android.useAndroidX=true
 
 kotlin.code.style=official
+
+# Dokka 2
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
 
 # Below here is all packaging details, not build configuration.
 version=1.0.0
