--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 android-gradle-plugin = "8.7.2"
 detekt = "1.23.7"
 kotlin = "2.0.21"
-dokka = "1.9.20"
+dokka = "2.0.0-Beta"
 
 bignum = "0.3.10"
 
