--- a/.github/workflows/code-scanning.yml
+++ b/.github/workflows/code-scanning.yml
@@ -38,7 +38,9 @@ jobs:
     strategy:
       matrix:
         path:
+          - bitrate
           - capacity
+          - length
           - percentage
           - temperature
     steps:
